# scnd

./: .Cargo.toml.un~  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cargo.toml~  LICENSE  README.md  meson.build
config/: conf_example
examples/: scnd.service  steamcountsnotifyd.service
src/: .main.rs.un~  .notify.rs.un~  cli.rs  config.rs  count.rs  game.rs  main.cpp  main.rs  main.rs~  notify.rs  notify.rs~  server.rs
src/core/: counterThread.cpp  counterThread.h  help.h  params.cpp  params.h
src/tool/: args.cpp  args.h  getPlayerCount.cpp  getPlayerCount.h  homeDirectory.cpp  homeDirectory.h
src/wrapper/: curl.cpp  curl.h  daemon.cpp  daemon.h  notify.cpp  notify.h
wix/: main.wxs
