[package]
name = "steamcountsnotifyd"
version = "0.0.3-a"
authors = ["marttcw <mtcw@disroot.org>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
dirs-next = "2.0.0"
notify-rust = "4"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
daemonize = "0.4.1"
a2s = { git = "https://github.com/rumblefrog/a2s-rs.git" }

