[package]
name = "scnd"
version = "0.6.0"
authors = ["nullsystem <15316579+nullsystem@users.noreply.github.com>"]
edition = "2021"
description = "Notification daemon that notifies you when your selected game(s) and/or server(s) gets some player activity"
readme = "README.md"
repository = "https://github.com/nullsystem/scnd"
license = "ISC"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.9"
dirs-next = "2.0.0"
notify-rust = "4.5.8"
clap_derive = "3.2.17"
clap = "3.2.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
a2s = { version = "0.5.1", features = ["async"] }
msq = "0.2"

